--- a/android-loiti-app/app/src/main/res/layout/activity_featured_menu.xml
+++ b/android-loiti-app/app/src/main/res/layout/activity_featured_menu.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_featured_menu_root"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/loiti_white" >
+<FrameLayout android:id="@+id/activity_featured_menu_root"
+             xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:background="@color/loiti_white">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/activity_featured_menu_list"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/activity_featured_menu_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layoutManager="LinearLayoutManager" />
+        android:layout_height="match_parent">
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/activity_featured_menu_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layoutManager="LinearLayoutManager"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </FrameLayout>
