--- a/android-loiti-app/app/src/main/res/layout/activity_weekly_menu.xml
+++ b/android-loiti-app/app/src/main/res/layout/activity_weekly_menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/loiti_white" >
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/loiti_white">
 
     <hu.artklikk.android.loiti.ui.core.LTextView
         android:id="@+id/activity_weekly_menu_header"
@@ -15,7 +15,7 @@
         android:text="@string/weekly_header"
         android:textColor="@color/loiti_orange"
         android:textSize="@dimen/header_text_size"
-        android:textStyle="bold" />
+        android:textStyle="bold"/>
 
     <hu.artklikk.android.loiti.ui.core.LTextView
         android:id="@+id/activity_weekly_menu_interval"
@@ -26,14 +26,19 @@
         android:gravity="center_vertical"
         android:paddingLeft="@dimen/header_left_padding"
         android:textColor="@color/loiti_gray"
-        android:textSize="@dimen/header_text_size" />
+        android:textSize="@dimen/header_text_size"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/activity_weekly_menu_list"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/activity_weekly_menu_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/activity_weekly_menu_interval"
-        android:orientation="vertical"
-        app:layoutManager="LinearLayoutManager" />
+        android:layout_height="match_parent">
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/activity_weekly_menu_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/activity_weekly_menu_interval"
+            android:orientation="vertical"
+            app:layoutManager="LinearLayoutManager"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
